# drone-flight-controller

./: CMakeLists.txt  README.md  c_cpp_properties.json
DroneFlightController/: LICENSE.lic
DroneFlightController.xcodeproj/: project.pbxproj
DroneFlightController.xcodeproj/project.xcworkspace/xcuserdata/vishwamartur.xcuserdatad/: UserInterfaceState.xcuserstate
DroneFlightController.xcodeproj/xcuserdata/vishwamartur.xcuserdatad/xcschemes/: xcschememanagement.plist
DroneFlightController/docs/: setup.md  tuning.md  usage.md
DroneFlightController/hardware/: components_list.md
DroneFlightController/src/: STM32F401.h  main.c
DroneFlightController/src/communication/: i2c_driver.c  i2c_driver.h  remote_control.c  remote_control.h  spi_driver.c  spi_driver.h
DroneFlightController/src/config/: FreeRTOSConfig.h   hardware_config.h
DroneFlightController/src/controllers/: esc.h  pid_controller.c  pid_controller.h
DroneFlightController/src/failsafe/: battery_monitor.c  battery_monitor.h  failsafe.c  failsafe.h
DroneFlightController/src/rtos/: rtos_init.c  rtos_init.h
DroneFlightController/src/rtos/tasks/: communication_task.c  control_task.c  failsafe_task.c  remote_control_task.c  sensor_task.c
DroneFlightController/src/sensors/: imu_sensor.c  imu_sensor.h  sensor_fusion.c  sensor_fusion.h
DroneFlightController/src/utils/: logger.c  logger.h  math_utils.c  math_utils.h
